small typo fixed

--- a/templates/backup.html
+++ b/templates/backup.html
@@ -11,7 +11,7 @@
 
             <br>
 
-            <a type="button" class="btn btn-success" href="/lab/{{ lab_number }}/grading">Success</a>
+            <a type="button" class="btn btn-success" href="/lab/{{ lab_number }}/grading">Start Grading</a>
         </div>
 
         <div class="col-4">
