--- a/templates/grading.html
+++ b/templates/grading.html
@@ -11,17 +11,29 @@
 
     </div>
 
-    <div class="row" id="template" type="x-tmpl-mustache" style="display:none;">
-        <div class="col-2">
+    <div class="container">
+        <div class="row align-items-start">
+            <div class="col-2">
+                Paste Your Rubric
+                <textarea type="text" class="form-control" rows="15"></textarea>
+            </div>
 
+            <div class="col-10">
+                <div class="row" id="target"></div>
+            </div>
         </div>
-        <div class="col-8">
+    </div>
+
+    <div id="template" type="x-tmpl-mustache" style="display:none;">
+
+
+        <div class="col-9">
             <pre><code class="langauge">[[{ code }]]</code>
 
             </pre>
 
         </div>
-        <div class="col-2">
+        <div class="col-3">
             <p class="h6">Name: [[ name ]] </p>
             <p class="h6">Pawprint: [[ pawprint ]]</p>
             <p class="h6">Previous Grade: [[ grade ]]</p>
@@ -39,7 +51,7 @@
                               onchange="comment_change(this.value)" rows="8"></textarea>
                 </div>
                 <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3" onclick="submit_grade()">Submit</button>
+                    <button type="button" class="btn btn-primary mb-3" onclick="submit_grade()">Submit</button>
                 </div>
             </form>
         </div>
@@ -47,8 +59,38 @@
 
     </div>
 
-    <div class="row" id="target"></div>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast text-bg-primary" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Notification</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                Successfully updated grade!
+            </div>
+        </div>
+    </div>
 
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"
+            integrity="sha512-fm9r9IVGmRs5y1JUf9jqTFf8PQDa3mIOrRHrPkK4025zimArnibUXu22aB8c7iD2goBeZK2fzL366wy2PftBYw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+
+
+        const toastLiveExample = document.getElementById('liveToast')
+
+
+        function render(submission) {
+            Mustache.tags = ['[[', ']]'];
+            const template = document.getElementById('template').innerHTML;
+            Mustache.parse(template)
+            const rendered = Mustache.render(template, submission);
+            document.getElementById('target').innerHTML = rendered;
+        }
+    </script>
 
 
     <script>
@@ -105,25 +147,21 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify(my_submissions[current_index]) // body data type must match "Content-Type" header
-            });
+            }).then(res => res.json())
+                .then(
+                    (submission) => {
+                        my_submissions[current_index].grade = submission.grade
+                        my_submissions[current_index].graded_at = submission.graded_at
+                        my_submissions[current_index].comments = submission.comments
+                        render(my_submissions[current_index])
+                        const toast = new bootstrap.Toast(toastLiveExample)
+                        toast.show()
+                    }
+                )
         }
 
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"
-            integrity="sha512-fm9r9IVGmRs5y1JUf9jqTFf8PQDa3mIOrRHrPkK4025zimArnibUXu22aB8c7iD2goBeZK2fzL366wy2PftBYw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <script>
-
-        function render(submission) {
-            Mustache.tags = ['[[', ']]'];
-            const template = document.getElementById('template').innerHTML;
-            Mustache.parse(template)
-            const rendered = Mustache.render(template, submission);
-            document.getElementById('target').innerHTML = rendered;
-        }
-    </script>
 
     <script>
 
