section added on UI

--- a/templates/grading.html
+++ b/templates/grading.html
@@ -36,8 +36,9 @@
         <div class="col-3">
             <p class="h6">Name: [[ name ]] </p>
             <p class="h6">Pawprint: [[ pawprint ]]</p>
-            <p class="h6">Previous Grade: [[ grade ]]</p>
-            <p class="h6">Previous Grade At: [[ grade_at ]]</p>
+            <p class="h6">Section: [[ section ]]</p>
+            <p class="h6">Grade: [[ grade ]]</p>
+            <p class="h6">Graded At: [[ graded_at ]]</p>
 
             <form class="row g-3">
 
